apps/customers-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-app
  labels:
    app: customers-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: customers-app
  template:
    metadata:
      labels:
        app: customers-app
    spec:
      containers:
        - name: customers-app
          image: customers-app
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
