apps/customers-app/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: customers-app
  labels:
    app: customers-app
spec:
  type: ClusterIP
  selector:
    app: customers-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
      name: customers-app
